--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -41,13 +41,17 @@
 <main>
 
     <div class=" container">
-        <div class="row">
+        <div class="row single-row">
             <div class="col-lg-12 text-left white-board">
                 <div class="input-title-box">
-                    <p class="input-title" th:text="${article.a_title}"></p>
+                    <p class="input-title-text" th:text="${article.a_title}"></p>
                 </div>
                 <div class="input-detail-box">
-                    <div th:utext="${article.a_detail}"></div>
+                    <div class="detail-text" th:utext="${article.a_detail}"></div>
+                    <div>
+                        <a th:href="@{${article.a_filepath}}">업로드 사진보기</a>
+                        <a th:href="@{/download/{filename}(filename=${article.a_filename})}">다운받기</a>
+                    </div>
                 </div>
                 <div class="white-board-bottom">
                     <button class="btn btn-success insert-btn btn-font-bigger" th:onclick="|location.href='@{/updateArticleForm/{a_seq}(a_seq=${article.a_seq})}'|">수정</button>
