--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -40,14 +40,10 @@
 <main>
 
     <div class=" container">
-        <div class="row content">
-            <div class="col-sm-2 sidenav">
-            </div>
-            <div class="col-sm-8 text-left white-board">
-                <div class="head-text">
-                    <div content-head-left>
+        <div class="row single-row">
+            <div class="col-lg-12 text-left white-board">
+                <div class="input-title-box">
                         <h1>익명 게시판</h1>
-                    </div>
                 </div>
                 <div class="article-box">
                     <div class="article-items-header">
@@ -65,10 +61,18 @@
 
                 </div>
                 <div class="white-board-bottom">
+<!--                    <li class="page-item" th:if="${session.pageMaker.prev}"><a class="page-link" th:href="@{/noticeList(page=${session.pageMaker.startPage-1})}"><span class="ti-angle-left"></span></a></li>-->
+
+                    <th:block th:each="pageNum : ${#numbers.sequence(paging.start_page,paging.end_page)}">
+                        <li class="page-item active" th:if="${paging.page == pageNum}"><a class="page-link"  th:text="${pageNum}">01</a></li>
+                        <li class="page-item" th:if="${paging.page!=pageNum}"><a class="page-link" th:href="@{/{page}(page=${pageNum})}" th:text="${pageNum}">02</a></li>
+                    </th:block>
+
+                    <!-- 다음페이지 -->
+<!--                    <li class="page-item" th:if="${session.pageMaker.next}"><a class="page-link" th:href="@{/noticeList(page=${session.pageMaker.endPage+1})}"><span class="ti-angle-right"></span></a>-->
+<!--                    </li>-->
                     <button class="btn btn-success" th:onclick="|location.href='@{/articleForm}'|">글쓰기</button>
                 </div>
-            </div>
-            <div class="col-sm-2 sidenav">
             </div>
         </div>
     </div>
