--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Article</title>
     <meta charset="utf-8">
@@ -8,67 +8,63 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/mystyle.css">
 
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Namu Intelligence</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
+<div>
+    <header>
+        <th:block th:replace="fragments/header :: headerFragment"></th:block>
+    </header>
 
-<main>
+    <main>
 
-    <div class=" container">
-        <div class="row single-row">
-            <div class="col-lg-12 text-left white-board">
-                <div class="input-title-box">
-                    <p class="input-title-text" th:text="${article.a_title}"></p>
-                </div>
-                <div class="input-detail-box">
-                    <div class="detail-text" th:utext="${article.a_detail}"></div>
-                    <div>
-                        <a th:href="@{${article.a_filepath}}">업로드 사진보기</a>
-                        <a th:href="@{/download/{filename}(filename=${article.a_filename})}">다운받기</a>
+        <div class=" container">
+            <div class="row single-row">
+                <div class="col-lg-12 text-left white-board panel-primary">
+                    <div class="input-title-box">
+                        <p class="input-title-text" th:text="${article.a_title}"></p>
+                    </div>
+                    <div class="input-detail-box">
+                        <div class="detail-text" th:utext="${article.a_detail}"></div>
+                        <div>
+                            <!--                        <a th:if="${not #strings.isEmpty(article.a_filename)}" th:href="@{${article.a_filepath}}">업로드 사진보기</a>-->
+                            <a th:if="${not #strings.isEmpty(article.a_filename)}" th:href="@{/download/{filename}(filename=${article.a_filename})}">파일 다운받기</a>
+                        </div>
+                    </div>
+                    <div class="white-board-bottom">
+                        <input type="hidden" th:value="${article.a_seq}" id="article_seq">
+                        <button class="btn btn-primary insert-btn btn-font-bigger" id="btn_comments">댓글</button>
+                        <button class="btn btn-primary insert-btn btn-font-bigger" th:onclick="|location.href='@{/updateArticleForm/{a_seq}(a_seq=${article.a_seq})}'|">수정</button>
+                        <button class="btn btn-warning btn-font-bigger" type="button" th:onclick="|location.href='@{/deleteArticle/{a_seq}(a_seq=${article.a_seq})}'|">삭제</button>
+                    </div>
+                    <div class="panel panel-default comment-box">
+                        <div class="panel-heading">
+                            Panel Heading
+                            <button id="btn_comment_delete">×</button>
+                        </div>
+                        <div class="panel-body">Panel Content</div>
+                    </div>
+                    <div id="result_comments">
+
                     </div>
                 </div>
-                <div class="white-board-bottom">
-                    <button class="btn btn-success insert-btn btn-font-bigger" th:onclick="|location.href='@{/updateArticleForm/{a_seq}(a_seq=${article.a_seq})}'|">수정</button>
-                    <button class="btn btn-warning btn-font-bigger" type="button" th:onclick="|location.href='@{/deleteArticle/{a_seq}(a_seq=${article.a_seq})}'|">삭제</button>
-                </div>
             </div>
         </div>
-    </div>
-</main>
+    </main>
 
 
-<footer class="container-fluid text-center">
-    <p>Footer Text</p>
-</footer>
+    <footer class="container-fluid text-center">
+        <p>Footer Text</p>
+    </footer>
+</div>
 
-<!-- 글쓰기 폼 java script -->
-<script src="/js/articleForm.js"></script>
+
+
+<!-- 게시글 java script -->
+<script src="/js/article.js"></script>
 
 <!-- SummerNote -->
 <script src="/js/summernote-lite.js"></script>
