--- a/src/main/resources/templates/articleUpdateForm.html
+++ b/src/main/resources/templates/articleUpdateForm.html
@@ -9,6 +9,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="/css/mystyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Jua&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -41,7 +43,7 @@
 <main>
 
     <div class=" container">
-        <form action="/updateArticle" method="post">
+        <form action="/updateArticle" method="post" enctype="multipart/form-data">
             <div class="row">
                 <div class="col-lg-12 text-left white-board">
                     <div class="input-title-box">
@@ -50,9 +52,14 @@
                     </div>
                     <div class="input-detail-box">
                         <textarea id="summernote" name="a_detail">[[${article.a_detail}]]</textarea>
-                        <input name="" type="multipartFile" th:value="${article.a_filepath}">
+                        <div class="box-flex">
+                            <input name="multipartFile" type="file" multiple="multiple">
+                            <a class="for-middle" th:if="${not #strings.isEmpty(article.a_filename)}" th:href="@{/download/{filename}(filename=${article.a_filename})}">기존 파일</a>
+                            <button type="button" onclick="">×</button>
+                        </div>
                     </div>
                     <div class="white-board-bottom">
+                        <button class="btn btn-success insert-btn btn-font-bigger" th:onclick="|location.href='@{/updateArticle/{a_seq}(a_seq=${article.a_seq})}'|">댓글</button>
                         <button class="btn btn-success insert-btn btn-font-bigger" th:onclick="|location.href='@{/updateArticle/{a_seq}(a_seq=${article.a_seq})}'|">수정</button>
                         <button class="btn btn-warning btn-font-bigger" type="button" th:onclick="|location.href='@{/article/{a_seq}(a_seq=${article.a_seq})}'|">취소</button>
                     </div>
