--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -42,7 +42,7 @@
 
                 </div>
                 <div class="white-board-bottom">
-                    <button class="btn btn-success" th:onclick="|location.href='@{/articleForm}'|">글쓰기</button>
+                    <button class="btn btn-success btn-lg limit-max-height" th:onclick="|location.href='@{/articleForm}'|">글쓰기</button>
                 </div>
                 <div class="page-btn-box">
                     <nav>
