--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -63,6 +63,12 @@
                             </li>
                         </ul>
                     </nav>
+                    <form th:action="@{/{page}(page=${paging.page})}" method="get">
+                        <div>
+                            <input type="text" name="search" placeholder="검색어를 입력하세요">
+                            <button>검색</button>
+                        </div>
+                    </form>
                 </diiv>
             </div>
         </div>
